<resources>
    <string name="pref_header_permissions">Permissions</string>
    <string name="pref_header_configuration">Configuration</string>
    <string name="pref_header_run_conditions">Run conditions</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_header_advanced">Advanced</string>
    <string name="pref_header_about">About</string>
    <string name="pref_header_debug">Debug</string>
    <string name="pref_inhibit_battery_opt_name">Disable battery optimization</string>
    <string name="pref_inhibit_battery_opt_desc">Needed to run reliably in the background.</string>
    <string name="pref_allow_notifications_name">Allow notifications</string>
    <string name="pref_allow_notifications_desc">Needed to run reliably in the background and to start and stop Syncthing.</string>
    <string name="pref_allow_local_network_name">Allow local network access</string>
    <string name="pref_allow_local_network_desc">Needed to connect to devices on the local network directly instead of passing through Syncthing\'s relay servers.</string>
    <string name="pref_local_storage_access_name">Allow local storage access</string>
    <string name="pref_local_storage_access_desc">Needed for Syncthing to have direct file access to internal and external storage.</string>
    <string name="pref_saf_folder_access_name">Allow folder access</string>
    <string name="pref_disable_app_hibernation_name">Disable app hibernation</string>
    <string name="pref_disable_app_hibernation_desc">Needed to prevent Android from automatically removing app permissions after a period of time.</string>
    <string name="pref_open_web_ui_name">Open web UI</string>
    <string name="pref_open_web_ui_desc">Open Syncthing\'s web configuration interface.</string>
    <string name="pref_conflicts_name">Sync conflicts</string>
    <plurals name="pref_conflicts_desc">
        <item quantity="one">%d file encountered a conflict during syncing.</item>
        <item quantity="other">%d files encountered conflicts during syncing.</item>
    </plurals>
    <string name="pref_import_configuration_name">Import configuration</string>
    <string name="pref_import_configuration_desc">Import an existing Syncthing configuration zip file.</string>
    <string name="pref_export_configuration_name">Export configuration</string>
    <string name="pref_export_configuration_desc">Export the current Syncthing configuration to a zip file.</string>
    <string name="pref_service_status_name">Syncthing status</string>
    <string name="pref_auto_mode_name">Auto mode</string>
    <string name="pref_auto_mode_desc">Automatically start and stop based on the specified conditions.</string>
    <string name="pref_network_conditions_name">Network conditions</string>
    <string name="pref_network_conditions_desc">Run when connected to certain network types or Wi-Fi networks.</string>
    <string name="pref_run_on_battery_name">Run on battery power</string>
    <string name="pref_run_on_battery_desc">Run when the device is on battery power and the battery level is at least %1$d%%. Syncthing always runs when plugged in.</string>
    <string name="pref_respect_battery_saver_name">Respect battery saver mode</string>
    <string name="pref_respect_battery_saver_desc">Only run when Android\'s battery saver mode is disabled.</string>
    <string name="pref_respect_auto_sync_data_name">Respect auto-sync data setting</string>
    <string name="pref_respect_auto_sync_data_desc">Only run when Android\'s auto-sync data setting is enabled.</string>
    <string name="pref_sync_schedule_settings_name">Sync schedule</string>
    <string name="pref_sync_schedule_settings_desc">Run Syncthing periodically based on a fixed time interval.</string>
    <string name="pref_keep_alive_name">Keep Syncthing alive</string>
    <string name="pref_keep_alive_desc">When Syncthing should not run, pause it instead of shutting it down. This avoids a potential performance hit when scanning large folders on startup.</string>
    <string name="pref_remote_control_name">Allow remote control</string>
    <string name="pref_remote_control_desc">Allow external apps to switch to auto mode or manually start and stop Syncthing.</string>
    <string name="pref_allow_auto_mode_name">Allow auto mode</string>
    <string name="pref_allow_auto_mode_desc">When disabled, all auto mode functionality is completely removed from the app, notification, and quick settings tile.</string>
    <string name="pref_show_exit_name">Show Exit button</string>
    <string name="pref_show_exit_desc">Show an Exit button in the persistent notification. The app will automatically start again after a reboot or when receiving a remote control command.</string>
    <string name="pref_show_details_name">Detailed notifications</string>
    <string name="pref_show_details_desc">Show the status of shared folders and connected devices in the persistent notification.</string>
    <string name="pref_start_on_boot_name">Start on boot</string>
    <string name="pref_start_on_boot_desc">Automatically start the app after a reboot.</string>
    <string name="pref_allow_safe_overwrites_name">Overwrite files safely</string>
    <string name="pref_allow_safe_overwrites_desc">With Android\'s September 2026 security patches, turning this off prevents other apps from losing permissions to shared files when they are synced.</string>
    <string name="pref_allow_safe_overwrites_info">By default, Syncthing overwrites files safely by writing the new data to a temporary file first, deleting the old file, and then renaming the temporary file. However, with Android\'s September 2026 security patches, these file operations will cause other apps to lose their permissions to shared files every time they are synced.\n\nIf safe overwrites are turned off, Syncthing will write the new data to a temporary file, overwrite the original file in place, and then delete the temporary file. This mainly causes issues if the app crashes during syncing. The partially overwritten file will create a sync conflict that must be manually resolved.</string>
    <string name="pref_version_name">Version</string>
    <string name="pref_save_logs_name">Save logs</string>
    <string name="pref_save_logs_desc">Save logcat logs to a file.</string>
    <string name="pref_conflicts_info">The following files encountered conflicts during syncing and need to be resolved manually. Select a file to open its parent directory in the system file manager.</string>
    <string name="pref_header_allowed_network_types">Allowed network types</string>
    <string name="pref_header_allowed_wifi_networks">Allowed Wi-Fi networks</string>
    <string name="pref_header_available_wifi_networks">Available Wi-Fi networks</string>
    <string name="pref_require_unmetered_network_name">Require unmetered network</string>
    <string name="pref_network_allow_wifi_name">Allow Wi-Fi</string>
    <string name="pref_network_allow_cellular_name">Allow mobile data</string>
    <string name="pref_network_allow_roaming_name">Allow mobile data (roaming)</string>
    <string name="pref_network_allow_ethernet_name">Allow ethernet</string>
    <string name="pref_network_allow_other_name">Allow other network interfaces</string>
    <string name="pref_location_optional_info">Location permissions are optional and are only needed when restricting allowed Wi-Fi networks. Even if the permissions are granted, they will not be used unless there are allowed Wi-Fi networks configured.</string>
    <string name="pref_allow_precise_location_name">Allow precise location access</string>
    <string name="pref_allow_precise_location_desc">Required for accessing Wi-Fi connection details at all.</string>
    <string name="pref_allow_background_location_name">Allow background location access</string>
    <string name="pref_allow_background_location_desc">Required for accessing Wi-Fi connection details in the background.</string>
    <string name="pref_wifi_networks_info">When using Wi-Fi, only run if connected to the specified networks. If no networks are specified, then all networks are allowed.</string>
    <string name="pref_add_wifi_network_name">Manually add Wi-Fi network</string>
    <string name="pref_sync_schedule_name">Sync on time schedule</string>
    <string name="pref_sync_schedule_desc">Sync for %2$s during every window of %1$s.</string>
    <string name="pref_sync_schedule_idle_name">Stop early when idle</string>
    <string name="pref_sync_schedule_idle_desc">Stop Syncthing before the sync window ends if at least one device connected and all folders have been idle for %1$s.</string>
    <string name="pref_sync_schedule_battery_only_name">Use time schedule only on battery</string>
    <string name="pref_sync_schedule_battery_only_desc">When plugged in, the time schedule will be ignored.</string>
    <string name="action_details">Details</string>
    <string name="dialog_error_details_title">Error details</string>
    <string name="alert_import_success">Successfully imported configuration</string>
    <string name="alert_import_failure">Failed to import configuration</string>
    <string name="alert_import_cancelled">Configuration import cancelled</string>
    <string name="alert_export_success">Successfully exported configuration</string>
    <string name="alert_export_failure">Failed to export configuration</string>
    <string name="alert_export_cancelled">Configuration export cancelled</string>
    <string name="alert_logcat_success">Successfully saved logs to %1$s</string>
    <string name="alert_logcat_failure">Failed to save logs to %1$s</string>
    <string name="alert_browser_not_found">No web browser is available.</string>
    <string name="alert_documentsui_not_found">Android\'s builtin file manager (DocumentsUI) is unavailable.</string>
    <string name="alert_tv_inhibit_battery_opt">Disabling \"battery\" optimizations requires manual steps on Android TV.</string>
    <string name="alert_tv_inhibit_battery_opt_details">Android TV has no UI for disabling \"battery\" optimizations, but it is still required to run Syncthing in the background reliably. This must be done by running the following adb command.</string>
    <string name="dialog_storage_type_title">Storage type</string>
    <string name="dialog_storage_type_local_title">Direct file access</string>
    <string name="dialog_storage_type_local_desc">Requires the \"all files access\" permission, but is more efficient and has better compatibility with Syncthing.</string>
    <string name="dialog_storage_type_saf_title">Storage access framework</string>
    <string name="dialog_storage_type_saf_desc">Only grants permissions to the selected folder, but is slower and may result in unexpected sync errors.</string>
    <string name="dialog_new_folder_title">New folder</string>
    <string name="dialog_new_folder_message">Enter the name of the new folder to create in %1$s.</string>
    <string name="dialog_new_folder_hint">Name</string>
    <string name="dialog_import_password_title">Config import</string>
    <string name="dialog_import_password_message">The selected zip file is encrypted. Enter the decryption password to import it.</string>
    <string name="dialog_import_password_hint">Decryption password</string>
    <string name="dialog_export_password_title">Config export</string>
    <string name="dialog_export_password_message">Enter a password to encrypt the exported zip file or leave empty to store it unencrypted.</string>
    <string name="dialog_export_password_hint">Encryption password</string>
    <string name="dialog_export_password_confirm_hint">Confirm password</string>
    <string name="dialog_min_battery_level_title">Minimum battery level</string>
    <string name="dialog_min_battery_level_message">Enter the minimum battery level needed for Syncthing to run.</string>
    <string name="dialog_min_battery_level_hint">Percentage</string>
</resources>